--- a/source/post/2024/2402.md
+++ b/source/post/2024/2402.md
@@ -9,10 +9,10 @@ id: 2402
 tags: 
   - cpp
   - cxx
-  - opentelemetry
-  - condition_variable
-  - notify
-title: std::condition_variable的信号丢失问题
+  - protobuf
+  - deadlock
+  - 死锁
+title: protobuf一处code_size模式的死锁BUG
 type: post
 ---
 
@@ -20,27 +20,33 @@ type: post
 
 ## 背景
 
-+ ForceFlush/Shutdown
-+ 锁和Predict临界区
+文件: `com.struct.extension.common.proto`
 
-```{mermaid}
-sequenceDiagram
-    Caller->>Caller: 采集当前待上报边界
-    Background->>Background: 启动
-    Caller->>Background: 通知唤醒后台线程(condition_variable-1)
-    Caller->>Caller: 进入等待上报完成通知(condition_variable-2)
-    loop 循环执行到退出
-    Background->>Background: 导出一批数据
-    Background->>Caller: 通知已经导出的数据边界(condition_variable-2)
-    Background->>Background: 没有数据则进入等待(condition_variable-1)
-    end
-    loop 直到当前上报边界已经全部上报完成或超时
-      Caller->>Caller: 等待上报完成唤醒(condition_variable-2)
-      Caller->>Caller: 检查上报边界或超时
-    end
-    Caller->>Caller: 退出
-    Background->>Background: 后台线程退出
+```proto
+syntax = "proto3";
+
+// option optimize_for = SPEED;
+// option optimize_for = LITE_RUNTIME;
+// option optimize_for = CODE_SIZE;
+// --cpp_out=lite:,--cpp_out=
+option cc_enable_arenas = true;
+
+package hello;
+
+import "google/protobuf/descriptor.proto";
+
+message UeEnumConversion {
+  string UeEnumAlias = 1;
+  string DefaultUeEnum = 2;
+  string DefaultPbEnum = 3;
+}
+
+extend google.protobuf.EnumOptions {
+  UeEnumConversion ue_enum_conversion = 2001;
+}
 ```
+
+生成代码 `protoc -I <protobuf include dir> -I . com.struct.extension.common.proto --cpp_out=code_size:./`
 
 ## 效果
 
