--- a/source/post/2024/2401.md
+++ b/source/post/2024/2401.md
@@ -59,13 +59,62 @@ test-source.c:6:15: warning: initialization of ‘char **’ from incompatible p
       |               ^~~~~~~~~
 ```
 
+## 另一个阻塞问题
+
+编译玩以后，我们会发现zsh启动的时候卡在了 `waitforpid` 调用上，我们看这个函数的代码:
+
+```c
+/**/
+int
+waitforpid(pid_t pid, int wait_cmd)
+{
+    int first = 1, q = queue_signal_level();
+
+    /* child_block() around this loop in case #ifndef WNOHANG */
+    dont_queue_signals();
+    child_block();		/* unblocked in signal_suspend() */
+    queue_traps(wait_cmd);
+
+    /* This function should never be called with a pid that is not a
+     * child of the current shell.  Consequently, if kill(0, pid)
+     * fails here with ESRCH, the child has already been reaped.  In
+     * the loop body, we expect this to happen in signal_suspend()
+     * via zhandler(), after which this test terminates the loop.
+     */
+    while (!errflag && (kill(pid, 0) >= 0 || errno != ESRCH)) {
+	if (first)
+	    first = 0;
+	else if (!wait_cmd)
+	    kill(pid, SIGCONT);
+
+	last_signal = -1;
+	signal_suspend(SIGCHLD, wait_cmd);
+	if (last_signal != SIGCHLD && wait_cmd && last_signal >= 0 &&
+	    (sigtrapped[last_signal] & ZSIG_TRAPPED)) {
+	    /* wait command interrupted, but no error: return */
+	    restore_queue_signals(q);
+	    return 128 + last_signal;
+	}
+	child_block();
+    }
+    unqueue_traps();
+    child_unblock();
+    restore_queue_signals(q);
+
+    return 0;
+}
+```
+
+乍看是没什么问题的，深入到 config.log 我们会发现它在测试 `ESRCH` 的时候失败了，然后再失败的时候会把 `ESRCH` 定义成 `EINVAL` 。
+测试 `ESRCH` 失败的原因其实和上面的问题一样，也是仅有 `-Wimplicit-int` 的时候触发了 `error` 。所以解决方法也是加 `-Wno-error=implicit-int` 。
+
 ## 解决
 
 最后，我给工具链脚本加了个编译选项检测来解决这类问题。
 
 ```bash
 # Patch for gcc 14
-for TEST_CFLAG in "-Wno-error=incompatible-pointer-types" "-Wno-error"; do
+for TEST_CFLAG in "-Wno-error=incompatible-pointer-types" "-Wno-error=implicit-int" "-Wno-error"; do
   echo "Test CFLAG: $TEST_CFLAG"
   (gcc $TEST_CFLAG -x c - -o /dev/null <<<'int main() { return 0; }' && echo "Test CFLAG: $TEST_CFLAG success" && ALL_CFLAGS="$ALL_CFLAGS $TEST_CFLAG") || echo "Test CFLAG: $TEST_CFLAG failed"
 done
