--- a/source/post/2024/2402.md
+++ b/source/post/2024/2402.md
@@ -27,7 +27,7 @@ syntax = "proto3";
 
 // option optimize_for = SPEED;
 // option optimize_for = LITE_RUNTIME;
-// option optimize_for = CODE_SIZE;
+option optimize_for = CODE_SIZE;
 // --cpp_out=lite:,--cpp_out=
 option cc_enable_arenas = true;
 
@@ -44,9 +44,70 @@ message UeEnumConversion {
 extend google.protobuf.EnumOptions {
   UeEnumConversion ue_enum_conversion = 2001;
 }
+
+extend google.protobuf.EnumValueOptions {
+  UeEnumConversion ue_enum_value = 3001;
+}
+
+enum TestEnum {
+  option (ue_enum_conversion) = {
+    UeEnumAlias: "ETgfSkinSlot"
+    DefaultPbEnum: "EN_SKIN_SLOT_TYPE_NONE"
+    DefaultUeEnum: "TgfSkinSlotNone"
+  };
+
+  TE_DEFAULT = 0 [(ue_enum_value) = { UeEnumAlias: "Default" }];
+}
+
 ```
 
 生成代码 `protoc -I <protobuf include dir> -I . com.struct.extension.common.proto --cpp_out=code_size:./`
+
+CPP代码: `main.cpp`
+
+```cpp
+#include <iostream>
+
+#include "com.struct.extension.common.pb.h"
+
+int main() {
+  for (int i = 0; i < hello::UeEnumConversion::descriptor()->field_count(); ++i) {
+    std::cout << "(UeEnumConversion): field " << hello::UeEnumConversion::descriptor()->field(i)->number() << "  ->  "
+              << hello::UeEnumConversion::descriptor()->field(i)->name() << std::endl;
+  }
+
+  if (hello::TestEnum_descriptor()->options().HasExtension(hello::ue_enum_conversion)) {
+    std::cout << hello::TestEnum_descriptor()->options().GetExtension(hello::ue_enum_conversion).DebugString()
+              << std::endl;
+  }
+  return 0;
+}
+```
+
+高版本的protobuf依赖比较复杂，我们用cmake写个sample： `CMakeLists.txt`
+
+```cmake
+#include <iostream>
+
+#include "com.struct.extension.common.pb.h"
+
+int main() {
+  for (int i = 0; i < hello::UeEnumConversion::descriptor()->field_count(); ++i) {
+    std::cout << "(UeEnumConversion): field " << hello::UeEnumConversion::descriptor()->field(i)->number() << "  ->  "
+              << hello::UeEnumConversion::descriptor()->field(i)->name() << std::endl;
+  }
+
+  if (hello::TestEnum_descriptor()->options().HasExtension(hello::ue_enum_conversion)) {
+    std::cout << hello::TestEnum_descriptor()->options().GetExtension(hello::ue_enum_conversion).DebugString()
+              << std::endl;
+  }
+  return 0;
+}
+```
+
+生成工程: `cmake -G Ninja .. -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DCMAKE_PREFIX_PATH=<protobuf install dir> -DCMAKE_BUILD_TYPE=RelWithDebInfo`
+
+编译: `cmake --build . -j`
 
 ## 效果
 
