--- a/source/post/2024/2402.md
+++ b/source/post/2024/2402.md
@@ -87,25 +87,45 @@ int main() {
 高版本的protobuf依赖比较复杂，我们用cmake写个sample： `CMakeLists.txt`
 
 ```cmake
-#include <iostream>
+project(test)
 
-#include "com.struct.extension.common.pb.h"
+find_package(absl)
+find_package(Protobuf)
 
-int main() {
-  for (int i = 0; i < hello::UeEnumConversion::descriptor()->field_count(); ++i) {
-    std::cout << "(UeEnumConversion): field " << hello::UeEnumConversion::descriptor()->field(i)->number() << "  ->  "
-              << hello::UeEnumConversion::descriptor()->field(i)->name() << std::endl;
-  }
+set(CMAKE_FIND_PACKAGE_PREFER_CONFIG TRUE)
 
-  if (hello::TestEnum_descriptor()->options().HasExtension(hello::ue_enum_conversion)) {
-    std::cout << hello::TestEnum_descriptor()->options().GetExtension(hello::ue_enum_conversion).DebugString()
-              << std::endl;
-  }
-  return 0;
-}
+get_target_property(PROTOBUF_IMPORTED_CONFIGURATIONS protobuf::libprotobuf IMPORTED_CONFIGURATIONS)
+
+if(PROTOBUF_IMPORTED_CONFIGURATIONS)
+  list(GET PROTOBUF_IMPORTED_CONFIGURATIONS 0 PROTOBUF_IMPORTED_CONFIGURATION)
+  set(CMAKE_MAP_IMPORTED_CONFIG_DEBUG ${PROTOBUF_IMPORTED_CONFIGURATION})
+endif()
+
+get_target_property(Protobuf_INCLUDE_DIRS protobuf::libprotobuf INTERFACE_INCLUDE_DIRECTORIES)
+
+add_custom_command(
+  OUTPUT com.struct.extension.common.pb.h com.struct.extension.common.pb.cc
+  COMMAND
+    "$<TARGET_FILE:protobuf::protoc>" -I "${CMAKE_CURRENT_LIST_DIR}" -I "${Protobuf_INCLUDE_DIRS}" "--cpp_out"
+    "code_size,dllexport_decl=TEST_EXT:${CMAKE_CURRENT_BINARY_DIR}"
+    "${CMAKE_CURRENT_LIST_DIR}/com.struct.extension.common.proto"
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  DEPENDS com.struct.extension.common.proto
+  COMMENT "Generate [@${CMAKE_CURRENT_BINARY_DIR}] com.struct.extension.common.pb.h com.struct.extension.common.pb.cc")
+
+add_library(enum_extension SHARED com.struct.extension.common.pb.h com.struct.extension.common.pb.cc)
+target_link_libraries(enum_extension PUBLIC protobuf::libprotobuf absl::log absl::log_internal_check_op
+                                            absl::log_internal_message)
+target_include_directories(enum_extension PUBLIC "${CMAKE_CURRENT_BINARY_DIR}")
+
+set_target_properties(enum_extension PROPERTIES C_VISIBILITY_PRESET "hidden" CXX_VISIBILITY_PRESET "hidden")
+target_compile_definitions(enum_extension PUBLIC "TEST_EXT=__attribute__((visibility(\"default\")))")
+
+add_executable(test main.cpp)
+target_link_libraries(test PUBLIC enum_extension)
 ```
 
-生成工程: `cmake -G Ninja .. -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DCMAKE_PREFIX_PATH=<protobuf install dir> -DCMAKE_BUILD_TYPE=RelWithDebInfo`
+生成工程: `mkdir build && cd build && cmake -G Ninja .. -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DCMAKE_PREFIX_PATH=<protobuf install dir> -DCMAKE_BUILD_TYPE=RelWithDebInfo`
 
 编译: `cmake --build . -j`
 
