--- a/source/post/2010/35.md
+++ b/source/post/2010/35.md
@@ -17,36 +17,19 @@ date: 2010-04-26 14:33:11
 
 ## Description
 
-<div>
-	We say that a set&nbsp;S&nbsp;= {x1,&nbsp;x2, ...,&nbsp;xn} is factor closed if for any&nbsp;xi&nbsp;&isin;&nbsp;S&nbsp;and any divisor&nbsp;d&nbsp;of&nbsp;xi&nbsp;we have&nbsp;d&nbsp;&isin;&nbsp;S. Let&#39;s build a GCD matrix (S) = (sij), wheresij&nbsp;= GCD(xi,&nbsp;xj) - the greatest common divisor of&nbsp;xi&nbsp;and&nbsp;xj. Given the factor closed set&nbsp;S, find the value of the determinant:&nbsp;
-	<center>
-
-		&nbsp;</center>
-</div>
+We say that a set $$S = {x1, x2, ..., xn}$$ is factor closed if for any xi ∈ S and any divisor d of xi we have d ∈ S. Let's build a GCD matrix (S) = (sij), wheresij = GCD(xi, xj) - the greatest common divisor of xi and xj. Given the factor closed set S, find the value of the determinant:
 
 ## Input
 
-<div>
-	The input contains several test cases. Each test case starts with an integer&nbsp;n&nbsp;(0 &lt;&nbsp;n&nbsp;&lt; 1000), that stands for the cardinality of&nbsp;S.&nbsp;
-
-	The next line contains the numbers of&nbsp;S:&nbsp;x1,&nbsp;x2, ...,&nbsp;xn.&nbsp;
-
-	It is known that each&nbsp;xi&nbsp;is an integer, 0 &le;&nbsp;xi&nbsp;&le; 2*109.&nbsp;
-
-	The input data set is correct and ends with an end of file.&nbsp;</div>
+The input contains several test cases. Each test case starts with an integer n (0 < n < 1000), that stands for the cardinality of S.  The next line contains the numbers of S: x1, x2, ..., xn.  It is known that each xi is an integer, 0 ≤ xi ≤ 2\*109.  The input data set is correct and ends with an end of file.
 
 ## Output
 
-<div>
-	For each test case find and print the value&nbsp;Dn&nbsp;mod 1000000007.
-
-		&nbsp;
-
-</div>
+For each test case find and print the value Dn mod 1000000007.
 
 ## Sample Input
 
-```
+```bash
 2
 1 2
 3
@@ -57,18 +40,19 @@ date: 2010-04-26 14:33:11
 
 ## Sample Output
 
-```
+```bash
 1
 12
 4
 ```
+
 首先由于行列式交换行和列后值不变，我们可以把输入的X进行排序，然后列出的矩阵行列式值等于原行列式
 
 然后，由于题目告诉我们输入的元素是封闭的（即如果a在S中，a的所有因子都在S中）
 
-我们对行列式进行三角阵的化简可以得出对于对角线上的元素xi=gcd（xi，xi）化简结果dp[i]有
+我们对行列式进行三角阵的化简可以得出对于对角线上的元素 $$ xi=gcd(xi，xi) $$ 化简结果dp[i]有
 
-dp[i] = x[i] - sum{x[i]的因子对应的dp值(即:gcd(xj,xi) == xj)? dp[j]: 0;}
+$$dp[i] = x[i] - sum{x[i] $$的因子对应的dp值(即: gcd(xj,xi) == xj)? dp[j]: 0; }$$
 
 这里我们可以看出它和欧拉函数很像,现在证明它就是欧拉函数
 
@@ -76,7 +60,7 @@ dp[i] = x[i] - sum{x[i]的因子对应的dp值(即:gcd(xj,xi) == xj)? dp[j]: 0;}
 
 显然对于x,诺y&lt;=x且gcd(x,y) &gt; 1
 
-y可以化简为y = xp * yp,其中xp 为小于y的最大的x的因子,且yp是x的某个因子的最大公约数为1的数字中最大的数字.
+y可以化简为$$y = xp * yp$$,其中xp 为小于y的最大的x的因子,且yp是x的某个因子的最大公约数为1的数字中最大的数字.
 
 对于每个因子的每个yp必然存在一个xp使y的值不同
 
