--- a/source/post/2024/2404.md
+++ b/source/post/2024/2404.md
@@ -17,24 +17,77 @@ type: post
 
 ## 前言
 
+我们项目组前段时间排查和分析压测环境下的某些业务模块大量索引结构的内存问题。通用的工具比如 [jemalloc+jeperf][5] 或者 [tcmalloc+gperf][6] 的组合过于底层，一方面开启跟踪开销较高，另一方面也是会产生过多噪音数据影响判断。所以我针对我们的智能指针（包含 `std::shared_ptr` 和我最近写了个非线程安全的版本的 `strong_rc_ptr` ， 这个后面有空再分享）和STL容器实现了allocator来帮助动态的手动插桩来分析问题。
+最终的效果是可以通过一键替换类型申明的Allocator来插入动态控制和插桩统计的能力，这里分享一下手夯标准STL allocator的一些实现细节，方便其他小伙伴如果需要做类似的实现来参考。
+
 ## 基础接口
 
+我们可以参考 [`std::allocator`][7] 首先是Allocator有一些基础接口，用于控制内存分配、释放、构造、析构还有max_size等。`std::allocator<T>::allocate`, `std::allocator<T>::deallocate`， `std::allocator<T>::construct`， `std::allocator<T>::destroy` , `std::allocator<T>::max_size` 等。这些比较简单就不做过多赘述。仅仅有两个需要稍微关注下的点。
+
++ 首先是C++20以后大多数接口开始转入 `constexpr` , 如果需要完整支持就业需要给自己的实现也加上 `constexpr` 。
++ 其次是 `std::allocator<T>::construct` 和 `std::allocator<T>::destroy` 这类构造和析构函数在C++20之后被移除了，转而使用 `std::allocator_traits<Alloc>::construct` 和 `std::allocator_traits<Alloc>::destroy` 。我们要实现定制化构造和析构的话需要优先实现 `allocator_traits` 特化。
+
 ## Allocator rebind
+
+我们可以看到 `allocator_traits` 的标准里有：
 
 | Type               | Definition                                                                                                                                                                |
 | ------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | `rebind_alloc<T>`  | `Alloc::rebind<T>::other` if present, otherwise `SomeAllocator<T, Args>` if this Alloc is of the form `SomeAllocator<U, Args>`, where Args is zero or more type arguments |
 | `rebind_traits<T>` | `std::allocator_traits<rebind_alloc<T>>`                                                                                                                                  |
 
-为什么需要 `Alloc::rebind<T>::other` ?
+`allocator` 的标准里也有：
 
-`SomeAllocator<T, Args>` -> `SomeAllocator<U, Args>` 的局限性。
+| Type     | Definition                                                           |
+| -------- | -------------------------------------------------------------------- |
+| `rebind` | `template< class U > struct rebind { typedef allocator<U> other; };` |
+
+那这个有什么用呢？
+
+比如我们声明一个 `std::unordered_map<K, V>` 的时候，实际指向的是 `std::unordered_map<K, V, std::hash<K>, std::euqal_to<V>, std::allocator<std::pair<const K, V>>>` 。
+这里可以看到allocator是 `std::allocator<std::pair<const K, V>>` 。但是实际上unordered_map内部还要维护Hash桶，还要维护Node的树形结构。这些也是需要分配内存的，那这些怎么声明allocator类型呢？
+就是通过 `rebind_alloc<T>/rebind<T>::other` 来实现。
+
+实际上，对于标准C++容器而言，假设我们有自己的allocator类:
+
+```cpp
+template<class T, class... Args>
+custom_allocator;
+```
+
+我们声明容易使用的类型是 `custom_allocator<T>` ，当需要 `U` 类型的allocator时，会自动把allocator类型rebind到 `custom_allocator<U>` 。那为什么还需要通过 `rebind_alloc<T>/rebind<T>::other` 来实现而不是定死这个规则呢？这里的问题就出在 `custom_allocator<T, Arg...>` -> `custom_allocator<U, Arg...>` 的这个后面的类型参数 `Args...` 上。有时候并不能满足我们的需求。
+
+比如在我们自己实现的allocator中:
+
+```cpp
+template <class T, class BackendAllocator = ::std::allocator<T>>
+struct UTIL_SYMBOL_VISIBLE allocator {
+  using background_allocator_type = BackendAllocator;
+  // ...
+};
+```
+
+它是在 `BackendAllocator` 的基础上增加了统计分析能力，实际分配内存和构造析构还是使用 `BackendAllocator` 。
+当STL默认的实现里传入 `allocator<T, std::allocator<T>>` 时，如果rebind到 `U` 会变成， `allocator<U, std::allocator<T>>` 。
+这显然不是我们想要的，我们想要的是 `allocator<U, std::allocator<U>>` 。所以我们就会特化自己的实现:
+
+```cpp
+// STL wiil rebind rebind_alloc to allocator<U, BackendAllocator>, in which BackendAllocator may not be right
+// So we always use rebind<U>::other to support allocator rebinding
+template <class U>
+struct rebind {
+  using __rebind_backend_type_other =
+      typename ::std::allocator_traits<background_allocator_type>::template rebind_alloc<U>;
+  using other = allocator<U, __rebind_backend_type_other>;
+};
+```
 
 ## 检测类型和设置Alias的两种方式
 
-`allocator_traits` 内某些类型定义需要根据Allocator是否有某些定义来选择。
+回顾前面标准的实现要求，可以看到 `allocator_traits` 内某些类型定义需要根据Allocator是否有某些定义来选择。
 
-比如上面对 `std::allocator_traits<Alloc>::rebind_alloc<T>` 的定义。
+比如上面对 `std::allocator_traits<Alloc>::rebind_alloc<T>` 的定义。这种编译期检测成员是否存在来走不同分支的实现，C++里要借助一些元编程的技巧。
+顺着整个C++标准和编译器的演进，大体上有以下这几种方式。
 
 ### 实现一: 通过类型推导
 
@@ -166,7 +219,7 @@ public:
 
 ## 检测函数存在的两种实现方法
 
-`allocator_traits` 内某些接口实现根据Allocator是否有某些函数存在二选择不同的实现。
+除了类型以外， `allocator_traits` 内某些接口实现也会根据Allocator是否有某些函数存在二选择不同的实现。
 
 比如标准对 `std::allocator_traits<Alloc>::max_size()` 的行为定义：
 
@@ -228,25 +281,91 @@ static inline constexpr void construct(allocator_type& a, T* p, Args&&... args) 
 ```cpp
 // max_size
 template <typename AllocOther>
-static inline constexpr auto _S_max_size(AllocOther& __a, int) -> decltype(__a.max_size()) {
+static inline constexpr auto _S_max_size(const AllocOther& __a, int) -> decltype(__a.max_size()) {
   return __a.max_size();
 }
 
 template <typename AllocOther>
-static inline constexpr size_type _S_max_size(AllocOther&, ...) {
+static inline constexpr size_type _S_max_size(const AllocOther&, ...) {
   return ::std::numeric_limits<size_type>::max();
 }
 
-static inline constexpr size_type max_size(allocator_type& a) noexcept {
+static inline constexpr size_type max_size(const allocator_type& a) noexcept {
   return _S_max_size(a, 0);
 }
 ```
 
-## Demangle的小trick - NO RTTI实现
+## 通用标准化 `allocator_traits` 实现的辅助类
+
+可以看到我们想实现一个完整的 `allocator` 的必须接口还好并不是很多，但是 `allocator_traits` 的内容还是蛮多的。特别是很多实现需要借助一些C++的detection idiom技巧，还要考虑跨C++标准的兼容性，比较复杂。
+所以为了降低这个实现难度，我这里提供了跨平台标准化实现。需要定制Allocator的话可以把特化 `std::allocator_traits<Allocator>` 继承这个辅助类然后仅仅定制化自己差异的部分就行了。
+
+大家有需要可以自取: <https://github.com/owent/atframe_utils/blob/main/include/memory/allocator_traits.h>
 
 ## boost某些容器实现的问题
 
+## 按对象类型的内存统计模块
+
+在内存统计和分析模块里，我们是需要对类型自动插桩。所以分析统计的不是像 [jemalloc+jeperf][5] 或者 [tcmalloc+gperf][6] 那种基于malloc/free的。而是基于类型的。
+这当中我们必然需要一些数据块来记录统计结果。那么为了减少这个开销，我们采用和类型相关的static变量的方式。简单show一下codes就是:
+
+```cpp
+template <class T>
+struct helper {
+  static object_allocator_metrics_storage* get_instance() {
+    static bool object_statistics_destroyed = false;
+    static object_allocator_metrics_storage* object_statistics_inst = mutable_object_allocator_metrics_for_type(
+        try_parse_raw_name(
+            guess_raw_name<typename ::std::remove_reference<typename ::std::remove_cv<T>::type>::type>()),
+        try_parse_demangle_name(
+            guess_pretty_name<typename ::std::remove_reference<typename ::std::remove_cv<T>::type>::type>()),
+        sizeof(typename ::std::remove_reference<typename ::std::remove_cv<T>::type>::type),
+        object_statistics_destroyed);
+    if (object_statistics_destroyed) {
+      return nullptr;
+    }
+    return object_statistics_inst;
+  }
+};
+
+template <class U>
+static void add_constructor_counter_template(void* p) {
+  if (nullptr != p) {
+    add_constructor_counter(helper<U>::get_instance(), p);
+  }
+}
+```
+
+这里有个特殊的 `object_statistics_destroyed` 使用用于在退出阶段可能也会产生内存分配，这时候统计模块可能已经退出了。这时候就不需要统计了，不然反而循环创建销毁反而会有问题。
+所有的单例模式实现如果涉及交叉引用也会有类似的问题，这又是属于另一个话题了。
+
+## Demangle的小trick - NO RTTI实现
+
 ## 效果
+
+简单展示下我们的Allocator的基础统计的部分输出：
+
+| Construct counter | Destructor counter | Allocate Count | Deallocate Count | Cost   | Demangled name                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               | Raw name                                                                                                                                                                                                                                                                                                      |
+| ----------------- | ------------------ | -------------- | ---------------- | ------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 1                 | 0                  | 1              | 0                | 560B   | std::_Sp_counted_ptr_inplace<std::basic_fstream<char>, atframework::memory::object_allocator_manager::allocator<std::basic_fstream<char>, std::allocator<std::basic_fstream<char> > >, (__gnu_cxx::_Lock_policy)2u>                                                                                                                                                                                                                                                                                          | St23_Sp_counted_ptr_inplaceISt13basic_fstreamIcSt11char_traitsIcEEN11atframework6memory24object_allocator_manager9allocatorIS3_SaIS3_EEELN9__gnu_cxx12_Lock_policyE2EE                                                                                                                                        |
+| 1                 | 0                  | 1              | 0                | 88B    | std::__detail::_Hash_node<std::pair<const tgf::product_data_require_key, tgf::product_data_require_key_stat>, false>                                                                                                                                                                                                                                                                                                                                                                                         | NSt8__detail10_Hash_nodeISt4pairIKN3tgf24product_data_require_keyENS2_29product_data_require_key_statEELb0EEE                                                                                                                                                                                                 |
+| 1448              | 0                  | 1448           | 0                | 57920B | std::__detail::_Hash_node<std::pair<const std::pair<int, int>, std::vector<global_order_manager::distribution_order_idx> >, false>                                                                                                                                                                                                                                                                                                                                                                           | NSt8__detail10_Hash_nodeISt4pairIKS1_IiiESt6vectorIN20global_order_manager22distribution_order_idxESaIS6_EEELb0EEE                                                                                                                                                                                            |
+| 4096              | 0                  | 4096           | 0                | 288KB  | std::__detail::_Hash_node<std::pair<const int, std::unordered_map<tgf::product_data_require_key, tgf::product_data_require_key_stat, tgf::trade_api::product_data_require_key_hash_type, tgf::trade_api::product_data_require_key_equal_type, atframework::memory::object_allocator_manager::allocator<std::pair<const tgf::product_data_require_key, tgf::product_data_require_key_stat>, std::allocator<std::pair<const tgf::product_data_require_key, tgf::product_data_require_key_stat> > > > >, false> | NSt8__detail10_Hash_nodeISt4pairIKiSt13unordered_mapIN3tgf24product_data_require_keyENS4_29product_data_require_key_statENS4_9trade_api34product_data_require_key_hash_typeENS7_35product_data_require_key_equal_typeEN11atframework6memory24object_allocator_manager9allocatorIS1_IKS5_S6_ESaISF_EEEEELb0EEE |
+| 6574              | 0                  | 6574           | 0                | 2157KB | std::__detail::_Hash_node<std::pair<const tgf::DTradeMarketProductKey, tgf::product_stats_detail_info_by_cycle>, false>                                                                                                                                                                                                                                                                                                                                                                                      | NSt8__detail10_Hash_nodeISt4pairIKN3tgf22DTradeMarketProductKeyENS2_34product_stats_detail_info_by_cycleEELb0EEE                                                                                                                                                                                              |
+| 5988              | 2994               | 2994           | 0                | 47904B | global_order_manager::slot_data_order_type_db_slice_set                                                                                                                                                                                                                                                                                                                                                                                                                                                      | N20global_order_manager33slot_data_order_type_db_slice_setE                                                                                                                                                                                                                                                   |
+| 73                | 73                 | 73             | 73               | 0B     | std::__detail::_Hash_node<std::pair<const std::pair<int, int>, global_order_manager::pending_calculate_product_info>, false>                                                                                                                                                                                                                                                                                                                                                                                 | NSt8__detail10_Hash_nodeISt4pairIKS1_IiiEN20global_order_manager30pending_calculate_product_infoEELb0EEE                                                                                                                                                                                                      |
+| 1                 | 1                  | 1              | 1                | 0B     | std::_Sp_counted_ptr_inplace<logic_hpa_pull_internal_record_data, atframework::memory::object_allocator_manager::allocator<logic_hpa_pull_internal_record_data, std::allocator<logic_hpa_pull_internal_record_data> >, (__gnu_cxx::_Lock_policy)2u>                                                                                                                                                                                                                                                          | St23_Sp_counted_ptr_inplaceI35logic_hpa_pull_internal_record_dataN11atframework6memory24object_allocator_manager9allocatorIS0_SaIS0_EEELN9__gnu_cxx12_Lock_policyE2EE                                                                                                                                         |
+| 8                 | 7                  | 8              | 7                | 64B    | std::__detail::_Hash_node<std::pair<const std::pair<int, int>, std::map<int, std::map<int, std::vector<tgf::DTradeMarketProductKey>, std::greater<int> > > >, false>                                                                                                                                                                                                                                                                                                                                         | NSt8__detail10_Hash_nodeISt4pairIKS1_IiiESt3mapIiS4_IiSt6vectorIN3tgf22DTradeMarketProductKeyESaIS7_EESt7greaterIiESaIS1_IKiS9_EEESt4lessIiESaIS1_ISC_SF_EEEELb0EEE                                                                                                                                           |
+| 8                 | 7                  | 8              | 7                | 64B    | std::__detail::_Hash_node<std::pair<const std::pair<int, int>, std::map<int, std::map<long int, std::vector<tgf::DTradeMarketProductKey>, std::greater<long int> > > >, false>                                                                                                                                                                                                                                                                                                                               | NSt8__detail10_Hash_nodeISt4pairIKS1_IiiESt3mapIiS4_IlSt6vectorIN3tgf22DTradeMarketProductKeyESaIS7_EESt7greaterIlESaIS1_IKlS9_EEESt4lessIiESaIS1_IKiSF_EEEELb0EEE                                                                                                                                            |
+| 4                 | 2                  | 2              | 0                | 192B   | logic_hpa_pull_internal_result_data                                                                                                                                                                                                                                                                                                                                                                                                                                                                          | 35logic_hpa_pull_internal_result_data                                                                                                                                                                                                                                                                         |
+| 112946            | 54923              | 56473          | 0                | 3529KB | tgf::trade_product_sp_info_summary                                                                                                                                                                                                                                                                                                                                                                                                                                                                           | N3tgf29trade_product_sp_info_summaryE                                                                                                                                                                                                                                                                         |
+| 56473             | 54923              | 56473          | 54923            | 145KB  | util::v2006::memory::__rc_ptr_counted_data_inplace_alloc<tgf::trade_product_sp_info_summary, atframework::memory::object_allocator_manager::allocator<tgf::trade_product_sp_info_summary, std::allocator<tgf::trade_product_sp_info_summary> > >                                                                                                                                                                                                                                                             | N4util5v20066memory35__rc_ptr_counted_data_inplace_allocIN3tgf29trade_product_sp_info_summaryEN11atframework6memory24object_allocator_manager9allocatorIS4_SaIS4_EEEEE                                                                                                                                        |
+| 155               | 0                  | 155            | 0                | 13640B | std::__detail::_Hash_node<std::pair<const tgf::DTradeStandardPriceKey, std::map<long int, util::v2006::memory::strong_rc_ptr<tgf::trade_product_sp_info_summary> > >, false>                                                                                                                                                                                                                                                                                                                                 | NSt8__detail10_Hash_nodeISt4pairIKN3tgf22DTradeStandardPriceKeyESt3mapIlN4util5v20066memory13strong_rc_ptrINS2_29trade_product_sp_info_summaryEEESt4lessIlESaIS1_IKlSB_EEEELb0EEE                                                                                                                             |
+| 2                 | 1                  | 2              | 1                | 112B   | std::__detail::_Hash_node<std::pair<const std::pair<int, int>, global_order_manager::calculate_pool_cycle_cache>, false>                                                                                                                                                                                                                                                                                                                                                                                     | NSt8__detail10_Hash_nodeISt4pairIKS1_IiiEN20global_order_manager26calculate_pool_cycle_cacheEELb0EEE                                                                                                                                                                                                          |
+| 2                 | 0                  | 1              | 0                | 2176KB | global_order_manager::slot_data_group_type                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | N20global_order_manager20slot_data_group_typeE                                                                                                                                                                                                                                                                |
+Allocator和不分内存统计的具体实现可以参见: <https://github.com/atframework/atsf4g-co/blob/sample_solution/atframework/service/component/memory/object_allocator_manager.h> 。
+
+后续也会根据需要酌情开源和增加malloc trace, 跟踪点diff, 动态规则的开关跟踪trace等功能。
 
 欢迎有兴趣的小伙伴互相交流研究。
 
@@ -254,3 +373,6 @@ static inline constexpr size_type max_size(allocator_type& a) noexcept {
 [2]: https://en.cppreference.com/w/cpp/language/template_parameters#Template_template_arguments
 [3]: https://en.cppreference.com/w/cpp/language/requires
 [4]: https://en.cppreference.com/w/cpp/experimental/is_detected
+[5]: https://github.com/jemalloc/jemalloc
+[6]: https://github.com/google/tcmalloc
+[7]: https://en.cppreference.com/w/cpp/memory/allocator
