--- a/source/post/2024/2405.md
+++ b/source/post/2024/2405.md
@@ -422,7 +422,15 @@ LIBATFRAME_UTILS_NAMESPACE_END
 
 ### 算法和容器基础组件适配
 
-有了上面的一键切换traits，其他的组件切换也就比较简单了。在 [atframe_utils][4] 内的组件接入一键切换的有时间轮定时器实现 `jeffies_timer` ， LRU算法容器 `lru_map` ，分布式系统和分布式事务的 `WAL模块` 。
+有了上面的一键切换traits，其他的组件切换也就比较简单了。
+
+首先在 [atframe_utils][4] 内部分组件接入了一件切换。
+
++ 时间轮定时器实现 [jeffies_timer][6] 使用了 `shared_ptr` 和 `weak_ptr` 来保证递归调用和移除时生命周期的有效性。
++ LRU算法容器 [lru_map][7] 里为了方便管理也使用了 `shared_ptr` 管理引用关系。
++ 分布式系统和分布式事务的 [WAL模块][8] 内涉及大量的Event Log的管理和订阅关系管理，也采用 `shared_ptr` 管理。
+
+这些都可以直接替换成新模块。
 
 还有一部分是我们工程里有很多读取策划通过配置Excel转出的数据，这部分访问量也很大。所以我对这个生成读表代码的模板系统 [xres-code-generator][5] 也做了改造支持。
 
@@ -443,3 +451,6 @@ LIBATFRAME_UTILS_NAMESPACE_END
 [3]: https://owent.net/2024/2404.html#allocator-rebind
 [4]: https://github.com/owent/atframe_utils
 [5]: https://github.com/owent/xres-code-generator
+[6]: https://github.com/owent/atframe_utils/blob/main/include/time/jiffies_timer.h
+[7]: https://github.com/owent/atframe_utils/blob/main/include/memory/lru_map.h
+[8]: https://github.com/owent/atframe_utils/tree/main/include/distributed_system
